fix stock endpoint to query by product id
