# backend/api/urls.py
@@ -13,7 +13,7 @@ urlpatterns = [
     path('products/', ProductListView.as_view(), name='product-list'),
     path('products/<int:pk>/', ProductDetailView.as_view(), name='product-detail'),
     path('stock/', StockListView.as_view(), name='stock-list'),
-    path('stock/<int:pk>/', StockDetailView.as_view(), name='stock-detail'),
+    path('stock/<int:product_id>/', StockDetailView.as_view(), name='stock-detail'),
     path('customers/', CustomerListView.as_view(), name='customer-list'),
     path('customers/<int:pk>/', CustomerDetailView.as_view(), name='customer-detail'),
     path('carts/', ShoppingCartListView.as_view(), name='cart-list'),
